add step 0 to install kgtk

--- a/tutorial/02-kg-profiling.ipynb
+++ b/tutorial/02-kg-profiling.ipynb
@@ -23,6 +23,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 0: Install KGTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only run the following cell if KGTK is not installed.\n",
+    " For example, if running in [Google Colab](https://colab.research.google.com/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kgtk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preamble: set up the environment and files used in the tutorial"
    ]
   },
