--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6112aef3-3eee-4046-b39b-d469d114f092",
+   "metadata": {},
+   "source": [
+    "## Step 0: Install KGTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "683a914d-cd73-4902-b1fc-aaf79f94fa6c",
+   "metadata": {},
+   "source": [
+    "Only run the following cell if KGTK is not installed.\n",
+    " For example, if running in [Google Colab](https://colab.research.google.com/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60ed48b8-1a35-4ae3-a17c-97174b35c04c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kgtk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7ce4502-5bfe-4343-bb59-06b82a01a8d2",
+   "metadata": {},
+   "source": [
+    "**Run the following cell, `gensim` is not installed with kgtk**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f6d3ed7d-00de-4520-b7f5-2719cb5aa18a",
@@ -78,9 +113,10 @@
     "additional_files = {\n",
     "    'p31x': 'derived.P31x.tsv'\n",
     "}\n",
+    "input_files_url = \"https://github.com/usc-isi-i2/kgtk-tutorial-files/raw/main/datasets/arnold-profiled\"\n",
     "ck = ConfigureKGTK(files,\n",
     "                  input_files_url=input_files_url)\n",
-    "input_files_url = \"https://github.com/usc-isi-i2/kgtk-tutorial-files/raw/main/datasets/arnold-profiled\"\n",
+    "\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
     "                  output_path=output_path,\n",
     "                  project_name=project_name,\n",
