--- a/tutorial/05-kg-enrichment-with-lod.ipynb
+++ b/tutorial/05-kg-enrichment-with-lod.ipynb
@@ -17,6 +17,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70b8e1c1-d0ba-46de-aa7f-14a5e4db304c",
+   "metadata": {},
+   "source": [
+    "## Step 0: Install KGTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d6e7007-7d51-43f4-b33f-25bbcb0d9155",
+   "metadata": {},
+   "source": [
+    "Only run the following cell if KGTK is not installed.\n",
+    " For example, if running in [Google Colab](https://colab.research.google.com/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00fc9a9a-b525-4774-9528-0316b266fb84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kgtk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ad7e2663",
