--- a/tutorial/07-kg-constraint-validation.ipynb
+++ b/tutorial/07-kg-constraint-validation.ipynb
@@ -29,13 +29,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adfe9e28-59b7-4fb1-9a44-87b3b84e2242",
+   "metadata": {},
+   "source": [
+    "## Step 0: Install KGTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0d5ec01-b83c-4a34-817c-5fc6e5b0623d",
+   "metadata": {},
+   "source": [
+    "Only run the following cell if KGTK is not installed.\n",
+    " For example, if running in [Google Colab](https://colab.research.google.com/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79f902f8-10b2-47c7-909b-1d120a465f0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kgtk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eed8165f-eda1-4c3f-9583-4cbc4ec42235",
+   "metadata": {},
+   "source": [
+    "## Preamble: set up the environment and files used in the tutorial"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "05c81d6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import all the libraries needed to run KGTK.\n",
     "import io\n",
     "import os\n",
     "import sys\n",
