--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -56,7 +56,6 @@
     "import io\n",
     "import os\n",
     "import sys\n",
-    "# from graph_tool.all import *\n",
     "\n",
     "from kgtk.configure_kgtk_notebooks import ConfigureKGTK\n",
     "from kgtk.functions import kgtk, kypher"
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "parameters"
@@ -107,26 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/input\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input\n",
       "kypher: kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "TEMP: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis\n",
-      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
       "STORE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
-      "kgtk: kgtk\n",
-      "OUT: /tmp/projects/tutorial-network-analysis\n",
       "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
       "KGTK_OPTION_DEBUG: false\n",
-      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
-      "label: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
-      "item: /Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\n"
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db\n",
+      "OUT: /tmp/projects/tutorial-network-analysis\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "kgtk: kgtk\n",
+      "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\n",
+      "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\n"
      ]
     }
    ],
@@ -143,20 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\" --as item  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-network-analysis/temp.tutorial-network-analysis/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-network-analysis_input/claims.wikibase-item.tsv.gz\" --as item  --limit 3\n",
       "node1\tlabel\tnode2\tid\n",
       "P10\tlabel\t'video'@en\tP10-label-en\n",
       "P1000\tlabel\t'record held'@en\tP1000-label-en\n",
       "P1001\tlabel\t'applies to jurisdiction'@en\tP1001-label-en\n",
-      "CPU times: user 3.12 ms, sys: 9.66 ms, total: 12.8 ms\n",
-      "Wall time: 3.52 s\n"
+      "CPU times: user 3.5 ms, sys: 12.6 ms, total: 16.1 ms\n",
+      "Wall time: 6.15 s\n"
      ]
     }
    ],
@@ -179,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.45 ms, sys: 12.1 ms, total: 21.6 ms\n",
-      "Wall time: 18.9 s\n"
+      "CPU times: user 22.7 ms, sys: 26.8 ms, total: 49.4 ms\n",
+      "Wall time: 45.1 s\n"
      ]
     }
    ],
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +336,7 @@
        "9  Q18608871           Pindegree   0.000000           Q18608871-Pindegree-9"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,15 +357,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 73.3 ms, sys: 21.1 ms, total: 94.5 ms\n",
-      "Wall time: 4.55 s\n"
+      "CPU times: user 93.1 ms, sys: 27.6 ms, total: 121 ms\n",
+      "Wall time: 6.82 s\n"
      ]
     },
     {
@@ -484,7 +483,7 @@
        "[13871 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,15 +533,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.69 ms, sys: 11.3 ms, total: 17.9 ms\n",
-      "Wall time: 3.28 s\n"
+      "CPU times: user 6.93 ms, sys: 11.5 ms, total: 18.5 ms\n",
+      "Wall time: 4.68 s\n"
      ]
     },
     {
@@ -697,7 +696,7 @@
        "[72 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,15 +722,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.72 ms, sys: 9.95 ms, total: 13.7 ms\n",
-      "Wall time: 1.95 s\n"
+      "CPU times: user 3.7 ms, sys: 10.8 ms, total: 14.5 ms\n",
+      "Wall time: 2.86 s\n"
      ]
     }
    ],
@@ -756,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +922,7 @@
        "[494 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,15 +949,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.49 ms, sys: 18.4 ms, total: 26.9 ms\n",
-      "Wall time: 3.5 s\n"
+      "CPU times: user 8.41 ms, sys: 18.9 ms, total: 27.3 ms\n",
+      "Wall time: 4.8 s\n"
      ]
     },
     {
@@ -1077,7 +1076,7 @@
        "9  Q1086823    P40  Q76363382    Q1086823-P40-Q76363382"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1225,7 @@
        "3  'Meinhard Schwarzenegger'@en  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1510,7 @@
        "12            'sibling'@en   'Meinhard Schwarzenegger'@en  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1673,7 @@
     "    connected-components -i $item\n",
     "        --minimum-cluster-size 1\n",
     "        --undirected \n",
-    "        -o $TEMP/item.commected_components.tsv\n",
+    "        -o $TEMP/item.connected_components.tsv\n",
     "\"\"\")"
    ]
   },
@@ -1687,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1707,7 @@
     }
    ],
    "source": [
-    "!head $TEMP/item.commected_components.tsv"
+    "!head $TEMP/item.connected_components.tsv"
    ]
   },
   {
@@ -1720,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1823,14 +1822,14 @@
        "10  CLUSxSQ8e6AE4e+fZWi4ePHyMQ==      2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i $TEMP/item.commected_components.tsv\n",
+    "    query -i $TEMP/item.connected_components.tsv\n",
     "        --match '\n",
     "            (item)-[]->(component)'\n",
     "        --return 'distinct component as node1, count(distinct item) as node2'\n",
@@ -1959,7 +1958,7 @@
    ],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i $TEMP/item.commected_components.tsv\n",
+    "    query -i $TEMP/item.connected_components.tsv\n",
     "        --match '\n",
     "            (item)-[]->(:`CLUSnhDzMpk859X1mzkDWfSLBg==`)'\n",
     "        --return 'distinct item as node1'\n",
@@ -1982,7 +1981,7 @@
    "outputs": [],
    "source": [
     "kgtk(\"\"\"\n",
-    "    query -i $TEMP/item.commected_components.tsv\n",
+    "    query -i $TEMP/item.connected_components.tsv\n",
     "        --match '\n",
     "            (item)-[]->(:`CLUSnhDzMpk859X1mzkDWfSLBg==`)'\n",
     "        --return 'distinct item as node1'\n",
@@ -2008,8 +2007,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.24 s, sys: 391 ms, total: 2.63 s\n",
-      "Wall time: 4.03 s\n"
+      "CPU times: user 2.26 s, sys: 408 ms, total: 2.67 s\n",
+      "Wall time: 4.74 s\n"
      ]
     },
     {
@@ -2197,8 +2196,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.92 ms, sys: 14.1 ms, total: 20 ms\n",
-      "Wall time: 8.09 s\n"
+      "CPU times: user 6.19 ms, sys: 11.4 ms, total: 17.6 ms\n",
+      "Wall time: 8.63 s\n"
      ]
     }
    ],
