--- a/tutorial/01-kgtk-introduction.ipynb
+++ b/tutorial/01-kgtk-introduction.ipynb
@@ -20,6 +20,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1617744d-8f2d-4af9-af36-9d8b570b4aa0",
+   "metadata": {},
+   "source": [
+    "## Step 0: Install KGTK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4818d0-ffd4-4bfd-bc15-6a28e6067d62",
+   "metadata": {},
+   "source": [
+    "Only run the following cell if KGTK is not installed.\n",
+    " For example, if running in [Google Colab](https://colab.research.google.com/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30d32722-d768-4b12-8723-3596c33cdaab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install kgtk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "28ca9cbc",
    "metadata": {},
    "source": [
@@ -28,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d11ddcf",
    "metadata": {},
    "outputs": [],
@@ -36,13 +63,12 @@
     "import os\n",
     "import os.path\n",
     "\n",
-    "#import papermill as pm\n",
     "from kgtk.configure_kgtk_notebooks import ConfigureKGTK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cfe8ba35",
    "metadata": {
     "tags": [
@@ -1754,9 +1780,9 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kgtk-env-dev",
    "language": "python",
-   "name": "python3"
+   "name": "kgtk-env-dev"
   },
   "language_info": {
    "codemirror_mode": {
