--- a/tutorial/01-kgtk-introduction.ipynb
+++ b/tutorial/01-kgtk-introduction.ipynb
@@ -2433,9 +2433,9 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "kgtk-env-dev",
+   "display_name": "kgtk-env",
    "language": "python",
-   "name": "kgtk-env-dev"
+   "name": "kgtk-env"
   },
   "language_info": {
    "codemirror_mode": {
