only load necessary files into cache

--- a/tutorial/07-kg-constraint-validation.ipynb
+++ b/tutorial/07-kg-constraint-validation.ipynb
@@ -103,24 +103,8 @@
     "files = [\n",
     "    \"all\",\n",
     "    \"label\",\n",
-    "    \"alias\",\n",
-    "    \"description\",\n",
-    "    \"external_id\",\n",
-    "    \"monolingualtext\",\n",
-    "    \"quantity\",\n",
-    "    \"string\",\n",
-    "    \"time\",\n",
-    "    \"item\",\n",
-    "    \"wikibase_property\",\n",
-    "    \"qualifiers\",\n",
-    "    \"datatypes\",\n",
-    "    \"p279\",\n",
     "    \"p279star\",\n",
-    "    \"p31\",\n",
-    "    \"in_degree\",\n",
-    "    \"out_degree\",\n",
-    "    \"pagerank_directed\",\n",
-    "    \"pagerank_undirected\"\n",
+    "    \"p31\"\n",
     "]\n",
     "ck = ConfigureKGTK(files)\n",
     "ck.configure_kgtk(input_graph_path=input_path,\n",
@@ -138,37 +122,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
-      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/input\n",
-      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
-      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
-      "KGTK_OPTION_DEBUG: false\n",
-      "kgtk: kgtk\n",
-      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
+      "TEMP: /tmp/projects/tutorial-constraints/temp.tutorial-constraints\n",
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/labels.en.tsv.gz\n",
       "kypher: kgtk query --graph-cache /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
       "OUT: /tmp/projects/tutorial-constraints\n",
+      "kgtk: kgtk\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input\n",
+      "KGTK_OPTION_DEBUG: false\n",
       "STORE: /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db\n",
-      "TEMP: /tmp/projects/tutorial-constraints/temp.tutorial-constraints\n",
-      "all: /Users/amandeep/isi-kgtk-tutorial/input/all.tsv.gz\n",
-      "label: /Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\n",
-      "alias: /Users/amandeep/isi-kgtk-tutorial/input/aliases.en.tsv.gz\n",
-      "description: /Users/amandeep/isi-kgtk-tutorial/input/descriptions.en.tsv.gz\n",
-      "external_id: /Users/amandeep/isi-kgtk-tutorial/input/claims.external-id.tsv.gz\n",
-      "monolingualtext: /Users/amandeep/isi-kgtk-tutorial/input/claims.monolingualtext.tsv.gz\n",
-      "quantity: /Users/amandeep/isi-kgtk-tutorial/input/claims.quantity.tsv.gz\n",
-      "string: /Users/amandeep/isi-kgtk-tutorial/input/claims.string.tsv.gz\n",
-      "time: /Users/amandeep/isi-kgtk-tutorial/input/claims.time.tsv.gz\n",
-      "item: /Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\n",
-      "wikibase_property: /Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-property.tsv.gz\n",
-      "qualifiers: /Users/amandeep/isi-kgtk-tutorial/input/qualifiers.tsv.gz\n",
-      "datatypes: /Users/amandeep/isi-kgtk-tutorial/input/metadata.property.datatypes.tsv.gz\n",
-      "p279: /Users/amandeep/isi-kgtk-tutorial/input/derived.P279.tsv.gz\n",
-      "p279star: /Users/amandeep/isi-kgtk-tutorial/input/derived.P279star.tsv.gz\n",
-      "p31: /Users/amandeep/isi-kgtk-tutorial/input/derived.P31.tsv.gz\n",
-      "in_degree: /Users/amandeep/isi-kgtk-tutorial/input/metadata.in_degree.tsv.gz\n",
-      "out_degree: /Users/amandeep/isi-kgtk-tutorial/input/metadata.out_degree.tsv.gz\n",
-      "pagerank_directed: /Users/amandeep/isi-kgtk-tutorial/input/metadata.pagerank.directed.tsv.gz\n",
-      "pagerank_undirected: /Users/amandeep/isi-kgtk-tutorial/input/metadata.pagerank.undirected.tsv.gz\n"
+      "all: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/all.tsv.gz\n",
+      "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/labels.en.tsv.gz\n",
+      "p279star: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/derived.P279star.tsv.gz\n",
+      "p31: /Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/derived.P31.tsv.gz\n"
      ]
     }
    ],
@@ -186,13 +154,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kgtk query --graph-cache /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/input/all.tsv.gz\" --as all  -i \"/Users/amandeep/isi-kgtk-tutorial/input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/input/aliases.en.tsv.gz\" --as alias  -i \"/Users/amandeep/isi-kgtk-tutorial/input/descriptions.en.tsv.gz\" --as description  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.external-id.tsv.gz\" --as external_id  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.monolingualtext.tsv.gz\" --as monolingualtext  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.quantity.tsv.gz\" --as quantity  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.string.tsv.gz\" --as string  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.time.tsv.gz\" --as time  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/amandeep/isi-kgtk-tutorial/input/claims.wikibase-property.tsv.gz\" --as wikibase_property  -i \"/Users/amandeep/isi-kgtk-tutorial/input/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/amandeep/isi-kgtk-tutorial/input/metadata.property.datatypes.tsv.gz\" --as datatypes  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P279.tsv.gz\" --as p279  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/amandeep/isi-kgtk-tutorial/input/derived.P31.tsv.gz\" --as p31  -i \"/Users/amandeep/isi-kgtk-tutorial/input/metadata.in_degree.tsv.gz\" --as in_degree  -i \"/Users/amandeep/isi-kgtk-tutorial/input/metadata.out_degree.tsv.gz\" --as out_degree  -i \"/Users/amandeep/isi-kgtk-tutorial/input/metadata.pagerank.directed.tsv.gz\" --as pagerank_directed  -i \"/Users/amandeep/isi-kgtk-tutorial/input/metadata.pagerank.undirected.tsv.gz\" --as pagerank_undirected  --limit 3\n",
+      "kgtk query --graph-cache /tmp/projects/tutorial-constraints/temp.tutorial-constraints/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/all.tsv.gz\" --as all  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-constraints_input/derived.P31.tsv.gz\" --as p31  --limit 3\n",
       "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
       "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
       "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
       "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n",
-      "CPU times: user 3.4 ms, sys: 8.99 ms, total: 12.4 ms\n",
-      "Wall time: 30.4 s\n"
+      "CPU times: user 6.13 ms, sys: 12.1 ms, total: 18.2 ms\n",
+      "Wall time: 28.7 s\n"
      ]
     }
    ],
@@ -219,8 +187,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.61 ms, sys: 11.3 ms, total: 18.9 ms\n",
-      "Wall time: 4.45 s\n"
+      "CPU times: user 7.68 ms, sys: 14 ms, total: 21.7 ms\n",
+      "Wall time: 3.48 s\n"
      ]
     },
     {
@@ -433,8 +401,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.58 ms, sys: 11.4 ms, total: 19 ms\n",
-      "Wall time: 7.11 s\n"
+      "CPU times: user 7.45 ms, sys: 13.1 ms, total: 20.6 ms\n",
+      "Wall time: 5.55 s\n"
      ]
     },
     {
@@ -1037,8 +1005,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.76 ms, sys: 9.82 ms, total: 13.6 ms\n",
-      "Wall time: 1.69 s\n"
+      "CPU times: user 3.82 ms, sys: 10.6 ms, total: 14.4 ms\n",
+      "Wall time: 1.28 s\n"
      ]
     }
    ],
