add isntructions to install graph-tool in google colab

--- a/tutorial/06-kg-network-analysis.ipynb
+++ b/tutorial/06-kg-network-analysis.ipynb
@@ -44,6 +44,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Run the following cell only in Google Golab, to install graph-tool. There is no conda installed in google colab, so we install it using apt-get**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!echo \"deb http://downloads.skewed.de/apt bionic main\" >> /etc/apt/sources.list\n",
+    "!apt-key adv --keyserver keys.openpgp.org --recv-key 612DEFB798507F25\n",
+    "!apt-get update\n",
+    "!apt-get install python3-graph-tool python3-cairo python3-matplotlib\n",
+    "!apt-get install libcairo2-dev "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preamble: set up the environment and files used in the tutorial"
    ]
   },
@@ -1554,6 +1574,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DO NOT RUN THE FOLLOWING CELL IN GOOGLE COLAB. graph-tool does not install properly**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1599,6 +1626,13 @@
    "source": [
     "`graph-tool` is a very rich library. Here is a visualization of the hierarchical structure of Arnold's extended family:\n",
     "> More work with the library is needed to interpret the visualization (not part of this tutorial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DO NOT RUN IN GOOGLE COLAB. graph-tool does not install properly**"
    ]
   },
   {
