fix typo, add warning

--- a/tutorial/02-kg-profiling.ipynb
+++ b/tutorial/02-kg-profiling.ipynb
@@ -3171,7 +3171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add the new graph to the databse anbd define alias `p1963computed` for it."
+    "Add the new graph to the databse and define alias `p1963computed` for it."
    ]
   },
   {
@@ -4850,6 +4850,8 @@
    "source": [
     "# Deploy the results (optional)\n",
     "\n",
+    "**DO NOT RUN THE CELLS BELOW, IF YOU ARE RUNNING in Google Colab**\n",
+    "\n",
     "Deploy the tutorial KG after profiling so that the profiles can be used in other notebooks."
    ]
   },
@@ -4857,15 +4859,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cp: /tmp/projects/tutorial-profiling/derived.Punits_used.tsv: No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "files_to_deploy = [\n",
     "    \"metadata.p31x.count.transitive.tsv\",\n",
@@ -4900,43 +4894,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 370424\n",
-      "-rw-r--r--  1 grantxie  staff   1353736 Jan 15 17:40 aliases.en.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff  54150971 Jan 30 23:33 all.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff  13620313 Jan 15 17:40 claims.external-id.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   1069769 Jan 15 17:40 claims.monolingualtext.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   1936951 Jan 15 17:40 claims.quantity.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   1095875 Jan 15 17:40 claims.string.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff    781182 Jan 15 17:40 claims.time.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff    616003 Jan 15 17:40 claims.url.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   7771149 Jan 18 12:14 claims.wikibase-item.augmented.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   6342403 Jan 15 17:40 claims.wikibase-item.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff     99436 Jan 15 17:40 claims.wikibase-property.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff  34282264 Jan 30 23:31 derived.P1963computed.tsv\n",
-      "-rw-r--r--  1 grantxie  staff    393695 Jan 15 17:40 derived.P279.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   3351678 Jan 15 17:40 derived.P279star.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   1188375 Jan 15 17:40 derived.P31.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   5102937 Jan 30 23:27 derived.P31x.tsv\n",
-      "-rw-r--r--  1 grantxie  staff     32115 Jan 30 23:32 derived.Paward_count.tsv\n",
-      "-rw-r--r--  1 grantxie  staff  37342732 Jan 30 23:32 derived.Pproperty_domain.tsv\n",
-      "-rw-r--r--  1 grantxie  staff     51360 Jan 15 17:40 derived.Punits_used.tsv\n",
-      "-rw-r--r--  1 grantxie  staff   1350387 Jan 15 17:40 descriptions.en.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   1070169 Jan 15 17:40 labels.en.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff    310033 Jan 15 17:40 metadata.in_degree.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff    589039 Jan 15 17:40 metadata.out_degree.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff     97973 Jan 30 23:27 metadata.p31x.count.transitive.tsv\n",
-      "-rw-r--r--  1 grantxie  staff   1886695 Jan 15 17:40 metadata.pagerank.directed.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   2208946 Jan 15 17:40 metadata.pagerank.undirected.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff     23119 Jan 15 17:40 metadata.property.datatypes.tsv.gz\n",
-      "-rw-r--r--  1 grantxie  staff   6244298 Jan 15 17:40 qualifiers.tsv.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -l {project_deployment_path}"
    ]
