use urls for images

--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -767,7 +767,7 @@
     "- configure the visualization\n",
     "\n",
     "Here we searched on the right for arnold, and we see the closest vecotrs as well as the cluster where it belongs:\n",
-    "![Google embedding projector](assets/gp-arnold.png \"Google embedding projector\")"
+    "![Google embedding projector](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/gp-arnold.png \"Google embedding projector\")"
    ]
   },
   {
@@ -783,8 +783,16 @@
    "id": "respective-buying",
    "metadata": {},
    "source": [
-    "![UMAP Color by Type](assets/gp-color-map-types.png \"UMAP Color by Type\")"
+    "![PCA Color by Type](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/gp-color-map-types.png \"PCA Color by Type\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c0fc0bb-5dc4-4bdd-baaf-8a617f71348c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
