use the new convert embeddings command

--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -37,20 +37,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6d3ed7d-00de-4520-b7f5-2719cb5aa18a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gensim\n",
+      "  Using cached gensim-4.1.2-cp39-cp39-macosx_10_9_x86_64.whl (24.0 MB)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in /Users/amandeep/anaconda3/envs/kgtk-env/lib/python3.9/site-packages (from gensim) (1.22.3)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /Users/amandeep/anaconda3/envs/kgtk-env/lib/python3.9/site-packages (from gensim) (1.8.0)\n",
+      "Collecting smart-open>=1.8.1\n",
+      "  Using cached smart_open-5.2.1-py3-none-any.whl (58 kB)\n",
+      "Installing collected packages: smart-open, gensim\n",
+      "Successfully installed gensim-4.1.2 smart-open-5.2.1\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install gensim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "stuffed-forge",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amandeep/anaconda3/envs/kgtk-env/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from kgtk.configure_kgtk_notebooks import ConfigureKGTK\n",
@@ -65,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "valued-space",
    "metadata": {},
    "outputs": [],
@@ -110,35 +134,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "operational-boost",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KGTK_LABEL_FILE: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/labels.en.tsv.gz\n",
+      "USE_CASES_DIR: /Users/amandeep/Github/kgtk-notebooks/use-cases\n",
+      "STORE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "KGTK_OPTION_DEBUG: false\n",
+      "TEMP: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings\n",
+      "OUT: /tmp/projects/tutorial-graph-embeddings\n",
+      "GRAPH: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input\n",
+      "kgtk: kgtk\n",
+      "kypher: kgtk query --graph-cache /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "KGTK_GRAPH_CACHE: /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db\n",
+      "EXAMPLES_DIR: /Users/amandeep/Github/kgtk-notebooks/examples\n",
+      "all: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/all.tsv.gz\n",
+      "label: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/labels.en.tsv.gz\n",
+      "alias: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/aliases.en.tsv.gz\n",
+      "description: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/descriptions.en.tsv.gz\n",
+      "item: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/claims.wikibase-item.tsv.gz\n",
+      "qualifiers: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/qualifiers.tsv.gz\n",
+      "p31: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P31.tsv.gz\n",
+      "p279star: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P279star.tsv.gz\n",
+      "p31x: /Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P31x.tsv\n"
+     ]
+    }
+   ],
    "source": [
     "ck.print_env_variables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "typical-mustang",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kgtk query --graph-cache /tmp/projects/tutorial-graph-embeddings/temp.tutorial-graph-embeddings/wikidata.sqlite3.db -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/all.tsv.gz\" --as all  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/labels.en.tsv.gz\" --as label  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/aliases.en.tsv.gz\" --as alias  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/descriptions.en.tsv.gz\" --as description  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/claims.wikibase-item.tsv.gz\" --as item  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/qualifiers.tsv.gz\" --as qualifiers  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P31.tsv.gz\" --as p31  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P279star.tsv.gz\" --as p279star  -i \"/Users/amandeep/isi-kgtk-tutorial/tutorial-graph-embeddings_input/derived.P31x.tsv\" --as p31x  --limit 3\n",
+      "node1\tlabel\tnode2\tid\tnode2;wikidatatype\n",
+      "P10\talias\t'gif'@en\tP10-alias-en-282226-0\t\n",
+      "P10\talias\t'animation'@en\tP10-alias-en-2f86d8-0\t\n",
+      "P10\talias\t'media'@en\tP10-alias-en-c1427e-0\t\n"
+     ]
+    }
+   ],
    "source": [
     "ck.load_files_into_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "appointed-holly",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vector_dimension = 30\n",
+    "vector_dimension = 100\n",
     "vector_output_path = f\"{os.environ['OUT']}/arnold.embeddings.augmented.{vector_dimension}.tsv\"\n",
-    "vector_output_w2v_path = f\"{os.environ['OUT']}/arnold.embeddings.augmented.{vector_dimension}.w2v.tsv\"\n",
-    "os.environ['VECTOR_DIMENSION'] = str(vector_dimension)"
+    "vector_output_w2v_path = f\"{os.environ['OUT']}/arnold.embeddings.augmented.{vector_dimension}.w2v.tsv\""
    ]
   },
   {
@@ -164,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "confused-motorcycle",
    "metadata": {},
    "outputs": [],
@@ -202,6 +264,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eed07568-def5-440e-8578-9fdf61dbd2cf",
+   "metadata": {},
+   "source": [
+    "**NOTE: The graph embeddings command will take approximately 10 minutes to run**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "stone-monaco",
@@ -210,7 +280,7 @@
    "source": [
     "kgtk(f\"\"\" --debug graph-embeddings\n",
     "            -op ComplEx \n",
-    "            --dimension $VECTOR_DIMENSION\n",
+    "            --dimension {vector_dimension}\n",
     "            -ot kgtk\n",
     "            --retain_temporary_data True\n",
     "            -T $TEMP\n",
@@ -255,44 +325,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "packed-minority",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_kgtk_to_w2v(input_path, output_path):\n",
-    "    \"\"\"\n",
-    "    Convert a KGTK file (node1/label/node2) that contains embeddings to the w2v format\n",
-    "    \"\"\"\n",
-    "    vector_count = 0\n",
-    "\n",
-    "    # Read the file once to count the lines as we need to put them at the top of the w2v file\n",
-    "    with open(input_path, \"r\") as kgtk_file:\n",
-    "        next(kgtk_file)\n",
-    "        for line in kgtk_file:\n",
-    "            vector_count += 1\n",
-    "        kgtk_file.close()\n",
-    "\n",
-    "    with open(output_path, \"w\") as w2v_file:\n",
-    "        w2v_file.write(\"{} {}\\n\".format(vector_count, vector_dimension))\n",
-    "        with open(input_path, \"r\") as kgtk_file:\n",
-    "            next(kgtk_file)\n",
-    "            for line in kgtk_file:\n",
-    "                items = line.split(\"\\t\")\n",
-    "                qnode = items[0]\n",
-    "                vector = items[2].replace(\",\", \" \")\n",
-    "                w2v_file.write(qnode + \" \" + vector)\n",
-    "            kgtk_file.close()\n",
-    "        w2v_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "pursuant-beach",
    "metadata": {},
    "outputs": [],
    "source": [
-    "convert_kgtk_to_w2v(f\"{vector_output_path}\", f\"{vector_output_w2v_path}\")"
+    "kgtk(f\"\"\"convert-embeddings-format -i {vector_output_path}\n",
+    "                                   --input-property graph_embeddings\n",
+    "                                   --output-format word2vec\n",
+    "                                   -o {vector_output_w2v_path}\n",
+    "\"\"\")"
    ]
   },
   {
@@ -609,9 +650,9 @@
     "1. node1 :- Qnode\n",
     "2. label :- name of the property\n",
     "3. node2 :- embedding vector for node1\n",
-    "4. node1;label :- label for node1\n",
+    "4. node1_label :- label for node1\n",
     "5. type :- `instance of` for node1\n",
-    "6. type;label :- label for type"
+    "6. type_label :- label for type"
    ]
   },
   {
@@ -636,9 +677,9 @@
     "        --return 'distinct n1, \n",
     "                  l.label as label,\n",
     "                  embedding as node2,\n",
-    "                  kgtk_lqstring_text(n1_label) as `node1;label`, \n",
+    "                  kgtk_lqstring_text(n1_label) as `node1_label`, \n",
     "                  group_concat(distinct class) as type, \n",
-    "                  group_concat(distinct kgtk_lqstring_text(class_label)) as `type;label`'\n",
+    "                  group_concat(distinct kgtk_lqstring_text(class_label)) as `type_label`'\n",
     "        -o $TEMP/arnold.embeddings.google.projector.tsv\n",
     "\"\"\")"
    ]
@@ -663,61 +704,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respective-employer",
+   "id": "b69b9414-73fc-4658-a513-b047a86d30ec",
    "metadata": {},
    "source": [
-    "#### Define a function to build the required files for google projector"
+    "#### Convert the `$TEMP/arnold.embeddings.google.projector.tsv` file to Google projector and metadata files"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "formed-metabolism",
+   "id": "d73be3e3-85f1-4a54-8d0f-2e32a1deb32e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_embedding_projector_metadata(gp_embeddings_path, metadata_path, vectors_path):\n",
-    "    \"\"\"\n",
-    "    build the vector and metadata files required for google projector\n",
-    "    \n",
-    "    :param gp_embeddings_path: file path which has the embeddings and metadata in kgtk format\n",
-    "    :param metadata_path: output file path for metadata\n",
-    "    :param vectors_path: output file path for vectors\n",
-    "    \"\"\"\n",
-    "    metadata_file = open(metadata_path, \"w\")\n",
-    "    metadata_file.write(\"tag\\tqnode\\ttype\\ttype_label\\n\")\n",
-    "\n",
-    "    vectors_file = open(vectors_path, \"w\")\n",
-    "\n",
-    "    with open(gp_embeddings_path) as qnodes_file:\n",
-    "        next(qnodes_file)\n",
-    "        for line in qnodes_file:\n",
-    "            vals = line.split('\\t')\n",
-    "            qnode = vals[0]\n",
-    "            qnode_label = vals[3]\n",
-    "            _type = vals[4] \n",
-    "            ftype_label = vals[5]\n",
-    "            embeddings = \"\\t\".join(vals[2].strip().split(\",\"))\n",
-    "\n",
-    "            if qnode.startswith(\"Q\"):\n",
-    "                metadata_file.write(\"{}\\t{}\\t{}\\t{}\\n\".format(qnode_label, qnode, _type, ftype_label.strip()))\n",
-    "                vectors_file.write(embeddings)\n",
-    "                vectors_file.write('\\n')\n",
-    "\n",
-    "    metadata_file.close()\n",
-    "    vectors_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "pointed-lunch",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "build_embedding_projector_metadata(f\"{os.environ['TEMP']}/arnold.embeddings.google.projector.tsv\",\n",
-    "                                  f\"{os.environ['OUT']}/arnold.metadata.{vector_dimension}.tsv\",\n",
-    "                                  f\"{os.environ['OUT']}/arnold.vectors.{vector_dimension}.tsv\")"
+    "kgtk(f\"\"\"--debug convert-embeddings-format \n",
+    "          -i $TEMP/arnold.embeddings.google.projector.tsv\n",
+    "          --metadata-columns node1,node1_label,type,type_label\n",
+    "          --input-property graph_embeddings\n",
+    "          --metadata-file $OUT/arnold.metadata.{vector_dimension}.tsv\n",
+    "          --output-format gprojector\n",
+    "          -o $OUT/arnold.vectors.{vector_dimension}.tsv\n",
+    "\"\"\")"
    ]
   },
   {
@@ -753,7 +760,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!head -2 $OUT/arnold.vectors.$VECTOR_DIMENSION.tsv"
+    "kgtk(f\"\"\"head -i $OUT/arnold.vectors.{vector_dimension}.tsv\"\"\")tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5def0ad8-36da-4a3b-b701-5d8eba0f4b6c",
+   "metadata": {},
+   "source": [
+    "### Download the files to local computer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5196f98b-e827-4020-b33d-eab81738463c",
+   "metadata": {},
+   "source": [
+    "**Run the following three cells only if you are running from Google Colab**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae71719-4864-483d-bf83-0b04ee5bea98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ba448db-3224-41e4-849b-c54a2dc35755",
+   "metadata": {},
+   "source": [
+    "#### Download the vectors file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de15de28-471f-4579-9322-4c942068af99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files.download(f\"{os.environ['OUT']}/arnold.vectors.{vector_dimension}.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbb278eb-f25f-4873-ab79-12356a3f451b",
+   "metadata": {},
+   "source": [
+    "#### Download the metadata file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06383741-8cb6-4177-a997-e2a59edde146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files.download(f\"{os.environ['OUT']}/arnold.metadata.{vector_dimension}.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b768af66-d35b-4ac8-aa12-c021d1139374",
+   "metadata": {},
+   "source": [
+    "**The files are now downloaded to your local 'Downloads' folder.**"
    ]
   },
   {
@@ -761,21 +838,56 @@
    "id": "under-angola",
    "metadata": {},
    "source": [
-    "## Google embedding projector\n",
-    "- open https://projector.tensorflow.org\n",
-    "- Load the vect files using the load button\n",
-    "- configure the visualization\n",
-    "\n",
-    "Here we searched on the right for arnold, and we see the closest vecotrs as well as the cluster where it belongs:\n",
-    "![Google embedding projector](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/gp-arnold.png \"Google embedding projector\")"
+    "## Google embedding projector\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4efb5f64-6301-46ae-b6be-a189a660a26d",
+   "metadata": {},
+   "source": [
+    "In a new tab, to go the URL: https://projector.tensorflow.org"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3f69eab-a3ff-47ff-8962-0514f86dc6be",
+   "metadata": {},
+   "source": [
+    "Load the `vector` and `metadata` files using the load button\n",
+    "![Google embedding projector](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/ge-load.png \"Google embedding projector\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd597626-17bb-45d2-a879-c43cb09dbd07",
+   "metadata": {},
+   "source": [
+    "#### UMAP visualization of the embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2aa105-f3d1-418d-aa71-9c569ef1cb85",
+   "metadata": {},
+   "source": [
+    "![Google embedding projector](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/ge-arnold-umap.png \"Google embedding projector\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4dfa2cc-ba07-4e6c-afe5-72c401b3e6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "rolled-falls",
    "metadata": {},
    "source": [
-    "#### PCA visualization of the embeddings, colored by `instance of`"
+    "#### PCA visualization of the embeddings, colored by `type_label`"
    ]
   },
   {
@@ -783,7 +895,7 @@
    "id": "respective-buying",
    "metadata": {},
    "source": [
-    "![PCA Color by Type](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/gp-color-map-types.png \"PCA Color by Type\")"
+    "![PCA Color by Type](https://raw.githubusercontent.com/usc-isi-i2/kgtk-notebooks/main/tutorial/assets/ge-arnold-pca.png \"PCA Color by Type\")"
    ]
   },
   {
